...
                    android:id="@+id/merchant"
                    style="@style/text_body_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:gravity="center"
                    tools:text="Synthetic Store" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/amount"
                    style="@style/text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/category"
                            style="@style/text_body_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Shopping" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginVertical="@dimen/spacing_small"
                            android:background="?attr/colorOutlineVariant" />
...

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/payment"
                            style="@style/text_body_bold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="Card" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginVertical="@dimen/spacing_small"
                            android:background="?attr/colorOutlineVariant" />
...
